# OmniWriter

./: .env  .gitignore  LICENSE  README.md  README_CN.md  langgraph.json  main.py  pyproject.toml
data/chromadb/: chroma.sqlite3
data/logs/: log-2026-04-07.jsonl  log-2026-04-08.jsonl  log-2026-04-10.jsonl  log-2026-04-12.jsonl  log-2026-04-13.jsonl  log-2026-04-14.jsonl  log-2026-04-15.jsonl
data/thread_id_123/: article.txt  outline.txt
data/thread_id_123/skills/web_search/: SKILL.md  web_search.py
src/core/: chroma_client.py  es_client.py  model_client.py
src/pipeline/: orchestrator.py  state_model.py
src/pipeline/agents/: __init__.py  head_agent.py  memory_manage_agent.py  outline_generate_agent.py  search_issue_agent.py  search_simplify_agent.py  title_decomposer_agent.py  write_chapter_agent.py
src/pipeline/agents/deepagent/: controller_agent.py  draw_images_agent.py  layout_agent.py  polish_article_agent.py  review_article_agent.py
src/pipeline/tools/: rag_tool.py  search_tool.py
src/prompts/: controller_prompt.yaml  head_prompt.yaml  layout_prompt.yaml  load_prompt.py  memory_manage_prompt.yaml  outling_generate_prompt.yaml  polish_artical_prompt.yaml  review_artical_prompt.yaml  search_simplify_promopt.yaml  test.yaml  title_decomposer.yaml  write_chapter_prompt.yaml
src/utils/: file_reader.py  logs.py
test/: agent_test.py  layout_agent.py  memory_manage_agent.py  polish_article_agent.py  review_article_agent.py  search_user_agent.py
test/skills/websearch/: SKILL.md  web_search.py
